--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <tr>
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
-    <td><input type="checkbox" /></td>
+    <td><input type="checkbox" /></td>hii
   </tr>
 </table>changethis
 
